--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -28,12 +28,7 @@
 
         <div class="container row">
            <h1>Hi, Welcome to your Dashboard</h1>
+           <div>{message}</div>
 
-
-<% if (user) { %>
-      <div class="user">Hello <%= user.name %></div>
-    <% } %>
-
-        </div>
     </body>
 </html>
