--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -29,10 +29,10 @@
 
 
 <div style="margin: 20px">
-    <c:if test="${userRoom!=null}">
+    <div class="creategame">
         <button value="создать игру" id="butCreateGame">создать игру</button>
         <div id="silImg" style="margin:5px 15px;"></div>
-    </c:if>
+    </div>
 </div>
 
 <div id="listGames" style="min-height: 500px;">
@@ -44,7 +44,7 @@
         countUs:2,
         init:function(){
             var thisEl=this;
-            var imgSel=$('<img src="/resources/images/siluetsel.png" width="20"/>').attr("ind","2");
+            var imgSel=$('<img src="/game/public/images/siluetsel.png" width="20"/>').attr("ind","2");
             jQuery('#silImg').append(imgSel).append(imgSel.clone().attr("ind","2")).append(imgSel.clone().attr("ind","3")).append(imgSel.clone().attr("ind","4"));
             this.unsel(2);
             $('#silImg img').click(function(el){thisEl.unsel(parseInt($(el.target).attr('ind')))});
@@ -62,9 +62,9 @@
         unsel:function(ind){
             this.countUs=ind;
             var mi=$("#silImg img");
-            mi.attr('src','/resources/images/siluetsel.png');
+            mi.attr('src','/game/public/images/siluetsel.png');
             for(var i=ind;i<mi.length;i++){
-                $(mi[i]).attr('src','/resources/images/siluet.png');
+                $(mi[i]).attr('src','/game/public/images/siluet.png');
             }
         },
         loadUserData:function(){
@@ -124,3 +124,5 @@
   </body>
 </html>      
     
+
+
