--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -94,7 +94,10 @@
                 if(data!=null){
                     for(var i=0;i<data.length;i++){
                         var buttonD=$('<button value="Присоединится">Присоединится</button>');
-                        var elD=$('<div><input type="hidden" value="'+data[i].numberRoom+'"><span>№'+(parseInt(data[i].numberRoom)+1)+' ('+data[i].maxCountUser+') '+'</span></div>');
+                        var elD=$('<div>
+                                      <input type="hidden" value="'+data[i].numberRoom+'">
+                                      <span>data[i].typeRoom+' #'+(parseInt(data[i].numberRoom)+1)+' ('+data[i].countUsers+'/'+data[i].maxCountUser+') '+'</span>
+                                   </div>');
                         elD.append(buttonD);
                         $('#listGames').empty().append(elD);
                         thisEl.createCl(buttonD,data[i].numberRoom);
@@ -105,7 +108,7 @@
             }).always(function(){
                 setTimeout(function(){thisEl.loadAllGame()},3000);
             });
-        },
+        }, 
         createCl:function(buttonD,numberRoom){
             var thisEl=this;
             buttonD.click(function(){thisEl.joinRoom(numberRoom);});
@@ -124,5 +127,8 @@
   </body>
 </html>      
     
+///games/room/getAllRoom   ([]numberRoom,typeRoom,countUsers,maxCountUser,
+///games/monopoly/createroom.html?countgameuser="+this.countUs;
+///games/monopoly/"+numberRoom+"/joinRoom.html
 
 
