upd gameroom.html add title

--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -5,7 +5,7 @@
     </head>
     <body class="container">
         <div class="page-header">
-            <h1>Simple Auth-System</h1>
+            <h1>Game Room</h1>
         </div>
 
         <nav class="navbar navbar-default">
