Add jquery to gameroom

--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -2,6 +2,8 @@
     <head>
         <title>Login Here</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
     </head>
     <body class="container">
         <div class="page-header">
@@ -29,7 +31,7 @@
 
 
 <div style="margin: 20px">
-    <div class="creategame">
+    <div class="creategame" style="display:none;">
         <button value="создать игру" id="butCreateGame">создать игру</button>
         <div id="silImg" style="margin:5px 15px;"></div>
     </div>
