--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -3,7 +3,8 @@
         <title>Login Here</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
+<script type="text/javascript" src="js/YConsole-compiled.js"></script>
+<script type="text/javascript" >YConsole.show();</script>
     </head>
     <body class="container">
         <div class="page-header">
