--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -3,6 +3,7 @@
         <title>Login Here</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="http://malsup.github.com/jquery.form.js"></script> 
 <script type="text/javascript" src="js/YConsole-compiled.js"></script>
 <script type="text/javascript" >YConsole.show();</script>
     </head>
@@ -37,6 +38,16 @@
         <div id="silImg" style="margin:5px 15px;"></div>
     </div>
 </div>
+
+<form id="createForm" action="createroom" method="post" style= "display:none;"> 
+    Type game:
+<select id="type" name="typegame">
+  <option value="monopolia">Monopolia</option>
+  <option value="imaginarium">Imaginarium</option>
+  
+</select>
+    <input type="submit" value="Submit Comment" /> 
+</form>
 
 <div id="listGames" style="min-height: 500px;">
 
@@ -115,7 +126,8 @@
             buttonD.click(function(){thisEl.joinRoom(numberRoom);});
         },
         createGame:function(){
-            document.location.href="/games/monopoly/createroom.html?countgameuser="+this.countUs;
+          //  document.location.href="/games/monopoly/createroom.html?countgameuser="+this.countUs;
+          $('createForm').show();
         },
         joinRoom:function(numberRoom){
             document.location.href="/games/monopoly/"+numberRoom+"/joinRoom.html";
