Form create rom fix

--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -39,14 +39,14 @@
     </div>
 </div>
 
-<form id="createForm" action="createroom" method="post" style= "display:none;"> 
+<form id="createForm" action="/createroom" method="post" style= "display:none;"> 
     Type game:
 <select id="type" name="typegame">
   <option value="monopolia">Monopolia</option>
   <option value="imaginarium">Imaginarium</option>
   
 </select>
-    <input type="submit" value="Submit Comment" /> 
+    <input type="submit" value="Создать игру" /> 
 </form>
 
 <div id="listGames" style="min-height: 500px;">
