--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -2,8 +2,11 @@
     <head>
         <title>Login Here</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="http://malsup.github.com/jquery.form.js"></script> 
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+ 
 <script type="text/javascript" src="js/YConsole-compiled.js"></script>
 <script type="text/javascript" >YConsole.show();</script>
     </head>
@@ -115,7 +118,7 @@
                     }
                 }else{
                     jQuery('#listGames').empty();
-                    $(".creategame").show();
+                    $(".creategame").dialog();
                 }
             }).always(function(){
                 setTimeout(function(){thisEl.loadAllGame()},3000);
