--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -49,7 +49,7 @@
      <option value="imaginarium">Imaginarium</option>
   
    </select>
-   <input type="submit" value="Создать игру" /> 
+   
 </form>
 
 <div id="listGames" style="min-height: 500px;">
@@ -149,7 +149,7 @@
                             $("#createForm").dialog('close');
                         }]
                     }
-                });
+                }).show();
 
 
 
