--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -138,8 +138,8 @@
                     resizable: false,
                    // width: 400,
                   //  show: { effect: 'drop', direction: "up" },
-                    modal: true,
-                    draggable: true,
+                  //  modal: true,
+                   // draggable: true,
                     buttons: [{
                         text: "Создать игру",
                         "class": "btn-add-properties",
