--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -1,184 +1,191 @@
 <html>
-    <head>
-        <title>Login Here</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
- 
-  <script type="text/javascript" src="js/YConsole-compiled.js"></script>
-  <script type="text/javascript" >YConsole.show();</script>
-    </head>
-    <body class="container">
-        <div class="page-header">
-            <h1>Game Room</h1>
-        </div>
 
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/signup">Sign Up</a></li>
-                        <li><a href="/dashboard">Dashboard</a></li>
-                    </ul>
+<head>
+    <title>Login Here</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/login">Log In</a></li>
-                        <li><a href="/logout">Log Out</a></li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
+    <script type="text/javascript" src="js/YConsole-compiled.js"></script>
+    <script type="text/javascript">
+        YConsole.show();
+    </script>
+</head>
 
-
-
-<div style="margin: 20px">
-    <div class="creategame" style="display:none;">
-        <button value="создать игру" id="butCreateGame">создать игру</button>
-        <div id="silImg" style="margin:5px 15px;"></div>
+<body class="container">
+    <div class="page-header">
+        <h1>Game Room</h1>
     </div>
-</div>
 
-<form id="createForm" action="/gameroom" method="post" style="display:none;"> 
-    Type game:
-   <select id="type" name="typegame">
-     <option value="monopolia">Monopolia</option>
-     <option value="imaginarium">Imaginarium</option>
-  
-   </select>
-   
-</form>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/signup">Sign Up</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                </ul>
 
-<div id="listGames" style="min-height: 500px;">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/login">Log In</a></li>
+                    <li><a href="/logout">Log Out</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 
-</div>
+    <div style="margin: 20px">
+        <div class="creategame" style="display:none;">
+            <button value="создать игру" id="butCreateGame">создать игру</button>
+            <div id="silImg" style="margin:5px 15px;"></div>
+        </div>
+    </div>
 
-<script type="application/javascript">
-    var objRoom={
-        countUs:2,
-        init:function(){
-            var thisEl=this;
-            var imgSel=$('<img src="/images/siluetsel.png" width="20"/>').attr("ind","2");
-            jQuery('#silImg').append(imgSel).append(imgSel.clone().attr("ind","2")).append(imgSel.clone().attr("ind","3")).append(imgSel.clone().attr("ind","4"));
-            this.unsel(2);
-            $('#silImg img').click(function(el){thisEl.unsel(parseInt($(el.target).attr('ind')))});
-            this.loadAllGame();
-            this.loadUserData();
-            $('#butCreateGame').click(function(){
-                thisEl.createGame();
-            });
+    <form id="createForm" action="/gameroom" method="post" style="display:none;">
+        Type game:
+        <select id="type" name="typegame">
+            <option value="monopolia">Monopolia</option>
+            <option value="imaginarium">Imaginarium</option>
 
-            this.dialog = $('#createForm').dialog({
+        </select>
+
+    </form>
+
+    <div id="listGames" style="min-height: 500px;">
+
+    </div>
+
+    <script type="application/javascript">
+        var objRoom = {
+            countUs: 2,
+            init: function() {
+                var thisEl = this;
+                var imgSel = $('<img src="/images/siluetsel.png" width="20"/>').attr("ind", "2");
+                jQuery('#silImg').append(imgSel).append(imgSel.clone().attr("ind", "2")).append(imgSel.clone().attr("ind", "3")).append(imgSel.clone().attr("ind", "4"));
+                this.unsel(2);
+                $('#silImg img').click(function(el) {
+                    thisEl.unsel(parseInt($(el.target).attr('ind')))
+                });
+                this.loadAllGame();
+                this.loadUserData();
+                $('#butCreateGame').click(function() {
+                    thisEl.createGame();
+                });
+                this.createForm();
+            },
+            createForm: function() {
+                this.dialog = $('#createForm').dialog({
                     autoOpen: false,
-                  //  resizable: false,
-                   // width: 400,
-                  //  show: { effect: 'drop', direction: "up" },
-                  //  modal: true,
-                   // draggable: true,
+                    //  resizable: false,
+                    // width: 400,
+                    //  show: { effect: 'drop', direction: "up" },
+                    //  modal: true,
+                    // draggable: true,
                     buttons: [{
                         text: "Создать игру",
                         "class": "btn-add-properties",
-                        click: function () {
+                        click: function() {
                             var form = $('form', this);
                             $.post(form.prop('action'),
-                                   form.serialize(),
-                                   function (response) {
-                                       alert("success" + response);
-                                   })
-                                   .fail(function () {
-                                       alert("error");
-                                   });
-                            $("#dialog-edit").dialog('close');
+                                    form.serialize(),
+                                    function(response) {
+                                        alert("success" + response);
+                                    })
+                                .fail(function() {
+                                    alert("error");
+                                });
+                            $("#createForm").dialog('close');
                         }
-                    },{
+                    }, {
                         text: "Отмена",
                         "class": "btn-add-properties",
-                        click: function () {
-                            
+                        click: function() {
                             $("#createForm").dialog('close');
                         }
                     }]
-                    
                 });
-
-        },
-        unselSiluet:function(el,ind){
-            if(ind==0){
-                unsel(ind);
-            }
-        },
-        unsel:function(ind){
-            this.countUs=ind;
-            var mi=$("#silImg img");
-            mi.attr('src','/images/siluetsel.png');
-            for(var i=ind;i<mi.length;i++){
-                $(mi[i]).attr('src','/images/siluet.png');
-            }
-        },
-        loadUserData:function(){
-            return;
-            var thisEl=this;
-            jQuery.ajax({
-                url:"/games/room/userdata",
-                dataType:"json",
-                type:"GET"
-            }).done(function (data) {
-                if(data!=null){
-//                    if(data.activeRooms.length>0){
-//                         $('#butCreateGame').attr("disabled","disabled");
-//                    }
+            },
+            unselSiluet: function(el, ind) {
+                if (ind == 0) {
+                    unsel(ind);
                 }
-            }).always(function(){
-                setTimeout(function(){thisEl.loadUserData()},3000);
-            });
-        },
-        loadAllGame:function(){
-            var thisEl=this;
-            jQuery.ajax({
-                url:"/games/room/getAllRoom",
-                dataType:"json",
-                type:"GET"
-            }).done(function (data) {
-                if(data!=null && data.length != 0){
-                    for(var i=0;i<data.length;i++){
-                        var buttonD=$('<button value="Присоединится">Присоединится</button>');
-                        var elD=$('<div><input type="hidden" value="'+data[i].numberRoom+'"><span>'+data[i].typeRoom+' #'+(parseInt(data[i].numberRoom)+1)+' ('+data[i].countUsers+'/'+data[i].maxCountUser+') '+'</span></div>');
-                        elD.append(buttonD);
-                        $('#listGames').empty().append(elD);
-                        thisEl.createCl(buttonD,data[i].numberRoom);
+            },
+            unsel: function(ind) {
+                this.countUs = ind;
+                var mi = $("#silImg img");
+                mi.attr('src', '/images/siluetsel.png');
+                for (var i = ind; i < mi.length; i++) {
+                    $(mi[i]).attr('src', '/images/siluet.png');
+                }
+            },
+            loadUserData: function() {
+                return;
+                var thisEl = this;
+                jQuery.ajax({
+                    url: "/games/room/userdata",
+                    dataType: "json",
+                    type: "GET"
+                }).done(function(data) {
+                    if (data != null) {
+                        //                    if(data.activeRooms.length>0){
+                        //                         $('#butCreateGame').attr("disabled","disabled");
+                        //                    }
                     }
-                }else{
-                    jQuery('#listGames').empty();
-                    $('.creategame').show();
+                }).always(function() {
+                    setTimeout(function() {
+                        thisEl.loadUserData()
+                    }, 3000);
+                });
+            },
+            loadAllGame: function() {
+                var thisEl = this;
+                jQuery.ajax({
+                    url: "/games/room/getAllRoom",
+                    dataType: "json",
+                    type: "GET"
+                }).done(function(data) {
+                    if (data != null && data.length != 0) {
+                        for (var i = 0; i < data.length; i++) {
+                            var buttonD = $('<button value="Присоединится">Присоединится</button>');
+                            var elD = $('<div><input type="hidden" value="' + data[i].numberRoom + '"><span>' + data[i].typeRoom + ' #' + (parseInt(data[i].numberRoom) + 1) + ' (' + data[i].countUsers + '/' + data[i].maxCountUser + ') ' + '</span></div>');
+                            elD.append(buttonD);
+                            $('#listGames').empty().append(elD);
+                            thisEl.createCl(buttonD, data[i].numberRoom);
+                        }
+                    } else {
+                        jQuery('#listGames').empty();
+                        $('.creategame').show();
 
-
-
-                }
-            }).always(function(){
-                setTimeout(function(){thisEl.loadAllGame()},3000);
-            });
-        }, 
-        createCl:function(buttonD,numberRoom){
-            var thisEl=this;
-            buttonD.click(function(){thisEl.joinRoom(numberRoom);});
-        },
-        createGame:function(){
-          //  document.location.href="/games/monopoly/createroom.html?countgameuser="+this.countUs;
-          this.dialog.show()
-        },
-        joinRoom:function(numberRoom){
-            document.location.href="/games/monopoly/"+numberRoom+"/joinRoom.html";
+                    }
+                }).always(function() {
+                    setTimeout(function() {
+                        thisEl.loadAllGame()
+                    }, 3000);
+                });
+            },
+            createCl: function(buttonD, numberRoom) {
+                var thisEl = this;
+                buttonD.click(function() {
+                    thisEl.joinRoom(numberRoom);
+                });
+            },
+            createGame: function() {
+                //  document.location.href="/games/monopoly/createroom.html?countgameuser="+this.countUs;
+                this.dialog.open();
+            },
+            joinRoom: function(numberRoom) {
+                document.location.href = "/games/monopoly/" + numberRoom + "/joinRoom.html";
+            }
         }
-    }
-    $(function(){
-        objRoom.init();
-    })
-</script>
-  </body>
-</html>      
+        $(function() {
+            objRoom.init();
+        })
+    </script>
+</body>
 
-
-
+</html>
