--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -81,11 +81,11 @@
             createForm: function() {
                 this.dialog = $('#createForm').dialog({
                     autoOpen: false,
-                    //  resizable: false,
-                    // width: 400,
-                    //  show: { effect: 'drop', direction: "up" },
-                    //  modal: true,
-                    // draggable: true,
+                    resizable: false,
+                    width: 400,
+                    show: { effect: 'drop', direction: "up" },
+                    modal: true,
+                    draggable: false,
                     buttons: [{
                         text: "Создать игру",
                         "class": "btn-add-properties",
