--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -85,7 +85,7 @@
                     width: 400,
                     show: { effect: 'drop', direction: "up" },
                     modal: true,
-                    draggable: false,
+                    draggable: true,
                     buttons: [{
                         text: "Создать игру",
                         "class": "btn-add-properties",
