--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -40,13 +40,13 @@
     </nav>
 
     <div style="margin: 20px">
-        <div class="creategame" style="display:none;">
+        <div class="creategame" style="">
             <button value="создать игру" id="butCreateGame">создать игру</button>
             <div id="silImg" style="margin:5px 15px;"></div>
         </div>
     </div>
 
-    <form id="createForm" action="/gameroom" method="post" style="">
+    <form id="createForm" action="/gameroom" method="post" style="display:none;">
         Type game:
         <select id="type" name="typegame">
             <option value="monopolia">Monopolia</option>
