--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,6 +29,7 @@
         <div class="container row">
            <h1>Hi, Welcome to your Dashboard</h1>
            <div>{message}</div>
+           <a href="/gameroom">Игровая комната</a>
 
     </body>
 </html>
