--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -65,7 +65,7 @@ YConsole.activate();
 
     <script type="application/javascript">
      var Room = {
-            countUs = 2;
+            countUs : 2,
             init: function(maxuser) {
                 var thisEl = this;
                 var imgSel = $('<img src="/images/siluetsel.png" width="20"/>').attr("ind", "2");
