--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -195,6 +195,8 @@
                             
                             
                         }
+                        Room.init(this.gameSett[0].maxCountUser);
+
                     } else {
                         jQuery('#listGames').append('<div style="color:red">Ошибка загрузки данных</>');                        
                     }
