--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -110,7 +110,7 @@
             changeRoom:function(){
                var el=$('typeGame');
                console.log(el);
-               console.log(el.value);
+               console.log(el.val());
                for(var i=0; i<this.gameSett.length;i++){
                   if (this.gameSett[i].typeGame == el.value){
                      //maxCountUser
