--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -101,6 +101,7 @@
                 this.loadAllGame();
                 //this.createForm();
                 $('#typeGame').change(function(){
+                           console.log(JSON.stringify(thisEl));
                            thisEl.changeRoom();    
                 });
                 $('#butCreateGame').click(function() {
