--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -109,7 +109,7 @@
                 });                
             },
             changeRoom:function(){
-               var el=$('typeGame');
+               var el=$('#typeGame');
                console.log(el);
                console.log(el.val());
                for(var i=0; i<this.gameSett.length;i++){
