--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -196,7 +196,7 @@
                             
                             
                         }
-                        Room.init(this.gameSett[0].maxCountUser);
+                        Room.init(thisEl.gameSett[0].maxCountUser);
 
                     } else {
                         jQuery('#listGames').append('<div style="color:red">Ошибка загрузки данных</>');                        
