--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -105,7 +105,24 @@
                 });
                 $('#butCreateGame').click(function() {
                     thisEl.createGame();
-                });                
+                });              
+                // this is the id of the form
+                $("#createForm").submit(function(e) {
+                     e.preventDefault(); // avoid to execute the actual submit of the form.
+        
+                     var form = $(this);
+                     var url = form.attr('action');
+
+                     $.ajax({
+                        type: "POST",
+                        url: url,
+                        data: form.serialize(), // serializes the form's elements.
+                        success: function(data)
+                        {
+                             alert(data); // show response from the server.
+                        }
+                     });
+                }
             },
             changeRoom:function(){
                var el=$('#typeGame');
