--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -43,11 +43,13 @@
     </nav>
 
     <form id="createForm" action="/gameroom" method="post" style="">
-        Type game:
-        <select id="typeGame" name="typegame">          
-        </select>
-        Count of users : <div id="silImg" style="margin:5px 15px;"></div>
-        <input type="hidden" name="countUs" class="countUs" value="2"/>
+        <div>Type game:
+           <select id="typeGame" name="typegame"></select>
+        </div>
+        <div>
+           Count of users : <div id="silImg" style="margin:5px 15px;"></div>
+           <input type="hidden" name="countUs" class="countUs" value="2"/>
+        </div>
     </form>
     <div style="margin: 20px">
         <div class="creategame" style="">
