--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -172,13 +172,15 @@
                     url: "/games/room/getAllRoom",
                     dataType: "json",
                     type: "GET"
-                }).done(function(data) {                   
+                }).done(function(data) {      
+                    $('#listGames').empty();
                     if (data != null && data.length != 0) {
+
                         for (var i = 0; i < data.length; i++) {
                             var buttonD = $('<button value="Присоединиться">Присоединиться</button>');
                             var elD = $('<div><input type="hidden" value="' + data[i].numberRoom + '"><span>' + data[i].typeRoom + ' #' + (parseInt(data[i].numberRoom) + 1) + ' (' + data[i].countUsers + '/' + data[i].maxCountUser + ') ' + '</span></div>');
                             elD.append(buttonD);
-                            $('#listGames').empty().append(elD);
+                            $('#listGames').append(elD);
                             thisEl.createCl(buttonD, data[i].numberRoom);
                         }
                     } else {
