--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -215,7 +215,7 @@
                     if (data != null) {
                         thisEl.gameSett = data.roomSettings;
                         thisEl.user = data.user;
-                        if (thisEl.gameSett.length ] != null && thisEl.gameSett.length != 0) {
+                        if (thisEl.gameSett.length != null && thisEl.gameSett.length != 0) {
                            for (var i = 0; i < thisEl.gameSett.length; i++) {
                                $('#typeGame').append('<option value="'+thisEl.gameSett[i].typeGame+'">'+thisEl.gameSett[i].typeGame+'</option>');                                                                        
                            }
