--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -180,10 +180,10 @@
                     type: "GET"
                 }).done(function(data) {      
                     $('#listGames').empty();
-                    if (data != null && data.length != 0) {
+                    if (data !== null && data.length != 0) {
                         for (var i = 0; i < data.length; i++) {
                         	var elD = $('<div><input type="hidden" value="' + data[i].nameRoom + '"><span>' + data[i].typeRoom + ' ' + (parseInt(data[i].nameRoom) + 1) + ' (' + data[i].roomUsers.length + '/' + data[i].maxCountUser + ') ' + '</span></div>');
-                        	if(data[i].roomUsers != null && thisEl.isUserInList(data[i].roomUsers)){
+                        	if(data[i].roomUsers !== null && thisEl.isUserInList(data[i].roomUsers)){
                                    var buttonD = $('<a href="/gotogame">Перейти в игру</a>');
                             
                                    elD.append(buttonD);
@@ -197,7 +197,7 @@
                         }
                     } else {
                         jQuery('#listGames').empty();                        
-                  
+                    }
                 }).always(function() {
                     setTimeout(function() {
                         thisEl.loadAllGame()
