--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -165,6 +165,8 @@
                 });
             },              
             isUserInList: function(users){
+                 console.log(users);
+                  console.log(this.user);
             	for(var i=0; i<users.length;i++){
             	   if(this.user.name == users[i]){
             	       return true;
