--- a/game/public/game.html
+++ b/game/public/game.html
@@ -1,8 +1,22 @@
 <html>
-    <head>
-        <title>Login Here</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    </head>
+
+<head>
+    <title>Login Here</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+    <script type="text/javascript" src="js/YConsole-compiled.js"></script>
+    <script type="text/javascript">
+           YConsole.activate();
+           console.log("first intercepted log.");
+           YConsole.docking="bottom";
+           YConsole.show();
+    </script>
+</head>
+
 <body class="container">
 
 <style type="text/css">body{margin: 0;padding: 0;}</style>
@@ -1134,4 +1148,5 @@ $(function(){
 </script>
 
 </body>
+
 </html>
