--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -186,7 +186,7 @@
                         for (var i = 0; i < data.length; i++) {
                         	var elD = $('<div><input type="hidden" value="' + data[i].nameRoom + '"><span>' + data[i].typeRoom + ' ' + (parseInt(data[i].nameRoom) + 1) + ' (' + data[i].roomUsers.length + '/' + data[i].maxCountUser + ') ' + '</span></div>');
                         	if(data[i].roomUsers !== null && thisEl.isUserInList(data[i].roomUsers)){
-                                   var buttonD = $('<a href="/gotogame">Перейти в игру</a>');
+                                   var buttonD = $('<a href="/game/'+data[i].nameRoom+'">Перейти в игру</a>');
                             
                                    elD.append(buttonD);
                          	}else{
