--- a/game/public/game.html
+++ b/game/public/game.html
@@ -664,6 +664,7 @@ var gameMonopoly={
         $.ajax({
             url: "/games/monopoly/getCards",
             dataType : "json",
+            data: {"nameRoom":thisEl.room.nameRoom},
             type: "GET"
         }).done(function(data) {
             if(data!=null) {
